Add key findings

--- a/hrt-narrative.Rmd
+++ b/hrt-narrative.Rmd
@@ -46,7 +46,15 @@ Published 6 October 2022
 
 ## Key findings
 
-* key finding 1
+* In 2021/22, there were 7.80 million items for HRT prescribed in England, a 91.3% increase from 2015/16.
+
+* There were 1.93 million identified patients that were prescribed HRT in England in 2021/22. This was a 30.5% increase from 1.48 million identified patients in 2020/21, and an 37.2% increase from 1.40 million in 2015/16.
+
+* The most common group to receive prescribing for HRT in 2021/22 was patients aged 50 to 54 with 437,000 identified patients. The next most common groups were patients aged 55 to 59 and patients 45 to 49
+
+* Areas of greater deprivation had the lowest number of identified patients who were being prescribed HRT in 2021/22, with 92.6% more patients receiving prescribing in the least deprived areas of the country compared to the most deprived.
+
+* A greater proportion of identified patients from the most deprived areas of the country who received HRT prescribing in 2021/22 were under the age of 60. A total of 76.6% of total identified patients in the most deprived areas were under 60, 64.6% of identified patients from the least deprived areas were under 60.
 
 ---
 
